# sozupay_mvp

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  todo.md
contracts/disbursement_wallet/: Cargo.toml
contracts/disbursement_wallet/src/: lib.rs
docs/: 30day-sprint-plan.md  README.md  architecture-microcredit-disbursement.md  e2e-payout-test.md  improvement-opportunities.md  ngo-disbursement-wallet-dev-plan.md  onepager.md  org-wallet-design.md  phase-privy-wallet-kyc.md  roadmap.md  self-custodial-auth-design.md  smart-accounts.md  soroban-disbursement-contract.md  supabase-users-table.sql  testnet-contracts.md  todo.md  yield-router-contract-spec.md
docs/00-overview/: onepager.md  roadmap.md  technical-spec.md
docs/01-architecture/: architecture-microcredit-disbursement.md  login-flow.md  org-wallet-design.md  smart-accounts.md
docs/02-contracts/: soroban-disbursement-contract.md  testnet-contracts.md  yield-router-contract-spec.md
docs/03-planning/: 30day-sprint-plan.md  ngo-disbursement-wallet-dev-plan.md  production-disbursements-tasks.md  todo.md
docs/04-integrations/: e2e-payout-test.md  ecommerce-integration.md
docs/05-requirements/: nfr.md
docs/06-operations/: runbooks.md
docs/07-reference/: codebase-cleanup-notes.md  performance-analysis.md  phase-privy-wallet-kyc.md  supabase-organizations-table.sql  supabase-recipients-table.sql  supabase-users-table.sql
public/: sozupay-widget.js
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
(+97 files in other folders)
